@@ -2,8 +2,8 @@ dnl Process this file with autoconf to produce a configure script.
 AC_INIT(src/RNumber.C)
 
 RNUMBER_MAJOR_VERSION=1
-RNUMBER_MINOR_VERSION=22
-RNUMBER_MICRO_VERSION=7
+RNUMBER_MINOR_VERSION=23
+RNUMBER_MICRO_VERSION=0
 RNUMBER_INTERFACE_AGE=0
 RNUMBER_BINARY_AGE=0
 RNUMBER_VERSION=$RNUMBER_MAJOR_VERSION.$RNUMBER_MINOR_VERSION.$RNUMBER_MICRO_VERSION
